StatCentral: Fix event and layout issues.

--- a/src/components/pill/pill.less
+++ b/src/components/pill/pill.less
@@ -1,7 +1,7 @@
 @import "@style/fumbbl.less";
 
 .pillwrapper {
-    display: inline-block;
+    display: flex;
 
     .pill {
         border-width: 2px;
