--- a/src/pages/statcentral/statcentral.less
+++ b/src/pages/statcentral/statcentral.less
@@ -42,6 +42,10 @@
             place-self: start;
         }
 
+        .center {
+            place-self: center;
+        }
+
         .end {
             place-self: end;
         }
